fix: allow using identical kv2 path for multiple secret sync requests
